<resources>
    <string name="app_name">Student App</string>
    <string name="home">Home</string>
    <string name="date_picker">Select a date</string>
    <string name="save_edit">Save edit</string>
    <string name="detail_start">Start Date</string>
    <string name="detail_end">End Date</string>
    <string name="edit_start_hint">Start Date (MM/DD/YYYY)</string>
    <string name="edit_end_hint">End Date (MM/DD/YYYY)</string>
    <string name="terms">Terms</string>
    <string name="term_details">Term Details</string>
    <string name="term_details_title">Term Details</string>
    <string name="term_edit_title">Edit Term</string>
    <string name="courses">Courses</string>
    <string name="course_list_title">Courses</string>
    <string name="course_details_title">Course Details</string>
    <string name="course_detail_status">Course Status</string>
    <string name="course_detail_note">Notes</string>
    <string name="course_edit_title">Edit Course</string>
    <string name="assessments">Assessments</string>
    <string name="mentors">Mentors</string>
    <string name="course_edit_note">Edit note</string>
    <string name="course_details">Course Details</string>
    <string name="assessment_list_title">Assessments</string>
    <string name="assessment_details_title">Assessment Details</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="assessment_edit_title">Edit Assessment</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_date">Edit Date</string>
    <string name="edit_status">Edit Status</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_type_2">Type of Assessment</string>
    <string name="assessment_details">Assessment Details</string>
    <string name="mentor_list_title">Mentors</string>
    <string name="mentor_details_title">Mentor Details</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="mentor_edit_title">Edit Mentor</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="mentor_details">Mentor Details</string>
</resources>
