<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AssessmentEditActivity"
    tools:showIn="@layout/activity_assessment_edit">

    <EditText
        android:id="@+id/asmt_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:hint="@string/edit_title"
        android:autofillHints="@string/edit_title"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/asmt_edit_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_date"
        android:autofillHints="@string/edit_date"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/asmt_edit_date_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asmt_edit_title" />

    <ImageButton
        android:id="@+id/asmt_edit_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/icon_size_40"
        android:minHeight="@dimen/icon_size_40"
        android:background="@drawable/ic_date"
        android:scaleType="fitXY"
        android:layout_margin="@dimen/text_margin"
        android:contentDescription="@string/date_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asmt_edit_title" />

    <TextView
        android:id="@+id/asmt_edit_type_label"
        android:layout_width="@dimen/detail_label_width"
        android:layout_height="wrap_content"
        android:text="@string/assessment_type"
        android:textSize="20sp"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@+id/asmt_edit_date"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/asmt_edit_type_dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/assessment_type_2"
        app:layout_constraintTop_toBottomOf="@+id/asmt_edit_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>